--- a/project-template--AIR-BALLOON-RIDE-main/index.html
+++ b/project-template--AIR-BALLOON-RIDE-main/index.html
@@ -26,7 +26,16 @@
 
 
       // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
+      // firebase.initializeApp(firebaseConfig);'
+      const firebaseConfig = {
+  apiKey: "AIzaSyAnCdCWD6x2Q_OQcYpcBvOfpWHiF41iP74",
+  authDomain: "air-balloon-ride-af1b6.firebaseapp.com",
+  databaseURL: "https://air-balloon-ride-af1b6-default-rtdb.firebaseio.com",
+  projectId: "air-balloon-ride-af1b6",
+  storageBucket: "air-balloon-ride-af1b6.appspot.com",
+  messagingSenderId: "492460648988",
+  appId: "1:492460648988:web:fef665469c25e46b1b0dd9"
+};
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
